--- a/MQTT_broker/MQTT_broker.csproj
+++ b/MQTT_broker/MQTT_broker.csproj
@@ -14,6 +14,7 @@
         <PackageReference Include="MQTTnet" Version="4.3.3.952" />
         <PackageReference Include="Serilog" Version="3.1.1" />
         <PackageReference Include="Serilog.Exceptions" Version="8.4.0" />
+        <PackageReference Include="Serilog.Sinks.Console" Version="5.0.1" />
     </ItemGroup>
 
     <ItemGroup>
