--- a/MQTT_broker/Properties/launchSettings.json
+++ b/MQTT_broker/Properties/launchSettings.json
@@ -1,6 +1,6 @@
 ﻿{
   "profiles": {
-    "WorkerService1": {
+    "MQTT_broker": {
       "commandName": "Project",
       "dotnetRunMessages": true,
       "environmentVariables": {
