--- a/PLUG_emulator/PLUG_emulator.csproj
+++ b/PLUG_emulator/PLUG_emulator.csproj
@@ -10,6 +10,10 @@
 
     <ItemGroup>
         <PackageReference Include="Microsoft.Extensions.Hosting" Version="7.0.1"/>
+        <PackageReference Include="MQTTnet" Version="4.3.3.952" />
+        <PackageReference Include="Serilog" Version="4.0.0-dev-02113" />
+        <PackageReference Include="Serilog.Exceptions" Version="8.4.0" />
+        <PackageReference Include="Serilog.Sinks.Console" Version="5.0.1" />
     </ItemGroup>
 
     <ItemGroup>
