--- a/API_service/API_service.csproj
+++ b/API_service/API_service.csproj
@@ -8,6 +8,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="7.0.0" />
         <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="7.0.16"/>
         <PackageReference Include="MongoDB.Bson" Version="2.24.0" />
         <PackageReference Include="MongoDB.Driver" Version="2.24.0" />
@@ -22,6 +23,9 @@
     </ItemGroup>
 
     <ItemGroup>
+      <Reference Include="Microsoft.IdentityModel.Tokens">
+        <HintPath>..\..\..\..\..\..\.nuget\packages\microsoft.identitymodel.tokens\5.6.0\lib\netstandard2.0\Microsoft.IdentityModel.Tokens.dll</HintPath>
+      </Reference>
       <Reference Include="MongoDB.Bson">
         <HintPath>..\..\..\..\..\..\.nuget\packages\mongodb.bson\2.23.1\lib\netstandard2.1\MongoDB.Bson.dll</HintPath>
       </Reference>
