--- a/DATA_processor/DATA_processor.csproj
+++ b/DATA_processor/DATA_processor.csproj
@@ -10,7 +10,6 @@
 
     <ItemGroup>
         <PackageReference Include="Microsoft.Extensions.Hosting" Version="7.0.1"/>
-        <PackageReference Include="MongoDB.Driver" Version="2.23.1" />
         <PackageReference Include="Serilog" Version="3.1.2-dev-02097" />
         <PackageReference Include="Serilog.Exceptions" Version="8.4.0" />
         <PackageReference Include="Serilog.Sinks.Console" Version="5.0.1" />
@@ -20,5 +19,9 @@
       <Content Include="..\.dockerignore">
         <Link>.dockerignore</Link>
       </Content>
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\DATABASE_library\DATABASE_library.csproj" />
     </ItemGroup>
 </Project>
