--- a/MQTT_client/MQTT_client.csproj
+++ b/MQTT_client/MQTT_client.csproj
@@ -11,7 +11,6 @@
 
     <ItemGroup>
         <PackageReference Include="Microsoft.Extensions.Hosting" Version="7.0.1"/>
-        <PackageReference Include="MongoDB.Driver" Version="2.23.1" />
         <PackageReference Include="MQTTnet" Version="4.3.3.952" />
         <PackageReference Include="Serilog.Exceptions" Version="8.4.0" />
         <PackageReference Include="Serilog.Sinks.Console" Version="5.0.1" />
@@ -25,5 +24,9 @@
 
     <ItemGroup>
       <Folder Include="bin\" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\DATABASE_library\DATABASE_library.csproj" />
     </ItemGroup>
 </Project>
