--- a/K8s/frontend-app-deployment.yaml
+++ b/K8s/frontend-app-deployment.yaml
@@ -14,7 +14,8 @@ spec:
     spec:
       containers:
         - name: frontend-app
-          image: frontend_app
+          image: frontend_app:latest_local
+          imagePullPolicy: Never
           env:
             - name: API_URL
               value: "http://api-service:80"
@@ -32,3 +33,16 @@ spec:
     - protocol: TCP
       port: 80
       targetPort: 80
+---
+#apiVersion: v1
+#kind: Service
+#metadata:
+#  name: frontend-service
+#spec:
+#  selector:
+#    app: frontend-app
+#  ports:
+#    - protocol: TCP
+#      port: 80
+#      targetPort: 80
+#  type: LoadBalancer
